# Game-Boilerplate-Generator

./: .gitignore  CMakeLists.txt  README.md
config/: config.h.in
include/: CMakeFile.h  Cronometer.h  Game.h  KeyManager.h  Logger.h  MainFile.h  MouseManager.h  ProjectBuilder.h  ProjectClass.h  Random.h  SceneManager.h  Task.h  Time.h  cmakelists.h  config.h  configfile.h  cronometerclass.h  game.h  keymanager.h  mainfile.h  mainmenuscene.h  mousemanager.h  projectnameclass.h  randomclass.h  scenemanager.h  timeclass.h  utils.h  workspace.h  writeHelp.h
include/generators/: CMakeFile.h  CMakeListfilesGenerator.h  Config.h  ConfigFileGenerator.h  Cronometer.h  CronometerGenerator.h  Game.h  GameGenerator.h  Generator.h  ISceneGenerator.h  KeyManagerGenerator.h  MainFileGenerator.h  MainSceneGenerator.h  MouseManagerGenerator.h  ProjectListFiles.h  ProjectNameFileGenerator.h  RandomGenerator.h  SceneManagerGenerator.h  TextureManager.h  Time.h  TimeGenerator.h  WorkspaceGenerator.h  workspace.h
include/generators/math/: CoreGenerator.h  Mat2Generator.h  Mat3Generator.h  Vec2Generator.h  Vec3Generator.h  Vec4Generator.h
include/math/: MathExtensionBuilder.h
include/templates/: ConfigTemplate.h  CronometerTemplate.h  GameTemplate.h  ISceneTemplate.h  KeyManagerTemplate.h  ListFilesTemplate.h  MainSceneTemplate.h  MainTemplate.h  MouseManagerTemplate.h  ProjectClassTemplate.h  RandomTemplate.h  SceneManagerTemplate.h  TextureManagerTemplate.h  TimeTemplate.h
include/templates/math/: CoreTemplate.h  Mat2.h  Mat3.h  Vec2.h  Vec3.h  Vec4.h  core.h
include/templates/vulkan/: VulkanBaseCriteriaTemplate.h  VulkanDebugMessengerTemplate.h  VulkanDebugTempalte.h  VulkanDevicePickerTemplate.h  VulkanDeviceTemplate.h  VulkanExtensionCriteria.h  VulkanGameTemplate.h  VulkanIDeviceCriteriaTemplate.h  VulkanISceneTemplate.h  VulkanInstanceTemplate.h  VulkanListFilesTemplate.h  VulkanMainSceneTemplate.h  VulkanMainTemplate.h  VulkanPhysicalDeviceTemplate.h  VulkanPipelineTemplate.h  VulkanQueueCriteriaTemplate.h  VulkanShaderModuleTemplate.h  VulkanShadersTemplate.h  VulkanSurfaceTemplate.h  VulkanSwapchainTemplate.h
include/utils/: ArgsParser.h  Case.h  Class.h  Conditional.h  File.h  ForStatement.h  Function.h  IfStatement.h  Instruction.h  Namespace.h  SwitchStatement.h  WhileStatement.h  WritableContent.h  replaceAll.h
include/utils/core/: Writer.h
include/vulkan/: VulkanProjectBuilder.h
src/: ArgsParser.cpp  CMakeFile.cpp  CMakeLists.txt  Config.cpp  Cronometer.cpp  Game.cpp  KeyManager.cpp  MainFile.cpp  MouseManager.cpp  ProjectBuilder.cpp  ProjectClass.cpp  ProjectListFiles.cpp  Random.cpp  SceneManager.cpp  Task.cpp  TextureManager.cpp  Time.cpp  cmakelists.cpp  configfile.cpp  cronometerclass.cpp  game.cpp  keymanager.cpp  main.cpp  mainfile.cpp  mainmenuscene.cpp  mousemanager.cpp  projectnameclass.cpp  randomclass.cpp  scenemanager.cpp  timeclass.cpp  utils.cpp  workspace.cpp  writeHelp.cpp
src/include/: CMakeFile.h  Config.h  Cronometer.h  Game.h  Logger.h  ProjectClass.h  SceneManager.h  Task.h  TextureManager.h  Time.h  config.h  workspace.h
src/include/generators/: CMakeFile.h  Config.h  KeyManager.h  MainFile.h  MouseManager.h  ProjectClass.h  ProjectListFiles.h  Random.h  SceneManager.h
src/include/utils/: Conditional.h  StringTrim.h  WritableUnit.h
src/math/: MathExtensionBuilder.cpp
src/utils/: ArgsParser.cpp  Case.cpp  Class.cpp  Conditional.cpp  File.cpp  ForStatement.cpp  Function.cpp  IfStatement.cpp  Instruction.cpp  Namespace.cpp  StringTrim.cpp  SwitchStatement.cpp  WhileStatement.cpp  WritableContent.cpp  replaceAll.cpp
src/vulkan/: VulkanProjectBuilder.cpp
